--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
-    "axios": "^1.10.0",
-    "cheerio": "^1.1.0",
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -20,6 +19,6 @@
     "mongoose": "^8.15.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
-    "openai": "^5.5.1"
+    "puppeteer": "^24.10.2"
   }
 }
