Converted the scraper package from Puppeteer to Cheerio

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "type": "module",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.10",
-    "puppeteer": "^24.10.2"
+    "nodemon": "^3.1.10"
   }
 }
